--- a/Style.css
+++ b/Style.css
@@ -94,7 +94,8 @@ article {
 }
 footer {
 	background-color: #4f848e;
-	height: 60px;
+	min-height: 60px;
+	
 }
 .footer {
 	display: inline-block;
@@ -106,11 +107,11 @@ footer {
 	margin-left: 10px;
 }
 .txtfooter {
-	padding: 1.5em;
+	/*padding: 1.5em;*/
+	margin:  1.5em;
 }
 aside, article, .txtfooter {
 	color: white;
-
   	width: 80%;
 }
 footer {
